@@ -1,11 +1,12 @@
 /*
- *    Copyright 2015 West Coast Informatics, LLC
+ *    Copyright 2019 West Coast Informatics, LLC
  */
 package org.ihtsdo.otf.mapping.jpa.services;
 
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FilenameFilter;
+import java.lang.reflect.InvocationTargetException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
@@ -1033,9 +1034,8 @@ public class MappingServiceJpa extends RootServiceJpa
   public MapRecordList getMapRecordsForProjectAndConcept(Long mapProjectId,
     String terminologyId) throws Exception {
 
-    List<MapRecord> mapRecords = manager
-        .createQuery(
-            "select m from MapRecordJpa m where mapProjectId = :mapProjectId and conceptId = :conceptId")
+    List<MapRecord> mapRecords = manager.createQuery(
+        "select m from MapRecordJpa m where mapProjectId = :mapProjectId and conceptId = :conceptId")
         .setParameter("mapProjectId", mapProjectId)
         .setParameter("conceptId", terminologyId).getResultList();
     MapRecordList mapRecordList = new MapRecordListJpa();
@@ -1812,6 +1812,12 @@ public class MappingServiceJpa extends RootServiceJpa
 
   // ONLY FOR TESTING PURPOSES
 
+  /**
+   * Removes the map records for map project.
+   *
+   * @param mapProjectId the map project id
+   * @return the long
+   */
   /* see superclass */
   @SuppressWarnings("unchecked")
   @Override
@@ -1868,7 +1874,7 @@ public class MappingServiceJpa extends RootServiceJpa
     Logger.getLogger(getClass()).debug(Integer.toString(nRecords)
         + " records deleted for map project id = " + mapProjectId);
 
-    return new Long(nRecords);
+    return Long.valueOf(nRecords);
 
   }
 
@@ -1905,245 +1911,244 @@ public class MappingServiceJpa extends RootServiceJpa
           "The application must let the service manage transactions for this method");
     }
 
-    // Setup content service
-    ContentService contentService = new ContentServiceJpa();
+    try (final MetadataService metadataService = new MetadataServiceJpa();) {
 
-    // Get map relation id->name mapping
-    MetadataService metadataService = new MetadataServiceJpa();
+      ContentService contentService = new ContentServiceJpa();
 
-    Map<String, String> relationIdNameMap =
-        metadataService.getMapRelations(mapProject.getSourceTerminology(),
-            mapProject.getSourceTerminologyVersion());
-    Logger.getLogger(MappingServiceJpa.class)
-        .debug("    relationIdNameMap = " + relationIdNameMap);
+      Map<String, String> relationIdNameMap =
+          metadataService.getMapRelations(mapProject.getSourceTerminology(),
+              mapProject.getSourceTerminologyVersion());
+      Logger.getLogger(MappingServiceJpa.class)
+          .debug("    relationIdNameMap = " + relationIdNameMap);
 
-    // use the map relation id->name mapping to construct a hash set of
-    // MapRelations
-    Map<String, MapRelation> mapRelationIdMap = new HashMap<>();
-    for (final MapRelation mapRelation : getMapRelations().getIterable()) {
-      mapRelationIdMap.put(mapRelation.getTerminologyId(), mapRelation);
-      relationIdNameMap.put(mapRelation.getTerminologyId(),
-          mapRelation.getName());
-    }
-
-    boolean prevTransactionPerOperationSetting = getTransactionPerOperation();
-    setTransactionPerOperation(false);
-    beginTransaction();
-    MapAdviceList mapAdvices = getMapAdvices();
-    int mapPriorityCt = 0;
-    int prevMapGroup = 0;
-
-    // sampling tracker variables
-    int samplingRecordsCreated = 0;
-    int samplingRecordsPublished = 0;
-    try {
-      // instantiate other local variables
-      String prevConceptId = null;
-      MapRecord mapRecord = null;
-      int ct = 0;
-      Random random = new Random();
-
-      if (mapUser == null) {
-        metadataService.close();
-        contentService.close();
-        throw new Exception("Loader user could not be found");
+      // use the map relation id->name mapping to construct a hash set of
+      // MapRelations
+      Map<String, MapRelation> mapRelationIdMap = new HashMap<>();
+      for (final MapRelation mapRelation : getMapRelations().getIterable()) {
+        mapRelationIdMap.put(mapRelation.getTerminologyId(), mapRelation);
+        relationIdNameMap.put(mapRelation.getTerminologyId(),
+            mapRelation.getName());
       }
 
-      for (final ComplexMapRefSetMember refSetMember : complexMapRefSetMembers) {
+      boolean prevTransactionPerOperationSetting = getTransactionPerOperation();
+      setTransactionPerOperation(false);
+      beginTransaction();
+      MapAdviceList mapAdvices = getMapAdvices();
+      int mapPriorityCt = 0;
+      int prevMapGroup = 0;
 
-        // Skip inactive cases
-        if (!refSetMember.isActive()) {
-          Logger.getLogger(MappingServiceJpa.class).debug(
-              "Skipping refset member " + refSetMember.getTerminologyId());
-          continue;
+      // sampling tracker variables
+      int samplingRecordsCreated = 0;
+      int samplingRecordsPublished = 0;
+      try {
+        // instantiate other local variables
+        String prevConceptId = null;
+        MapRecord mapRecord = null;
+        int ct = 0;
+        Random random = new Random();
+
+        if (mapUser == null) {
+          throw new Exception("Loader user could not be found");
         }
 
-        // Skip concept exclusion rules
-        if (refSetMember.getMapRule() != null
-            && refSetMember.getMapRule().matches("IFA.*")) {
-          if (refSetMember.getMapAdvice()
-              .contains("MAP IS CONTEXT DEPENDENT FOR GENDER")
-              && !refSetMember.getMapRule().contains("AND IFA")) {
-            // unless simple gender rule, then keep
-          } else if (refSetMember.getMapRule().matches(
-              "IFA\\s\\d*\\s\\|\\s.*\\s\\|\\s[<>].*AND IFA\\s\\d*\\s\\|\\s.*\\s\\|\\s[<>].*")
-              && !refSetMember.getMapRule().matches(".*AND IFA.*AND IFA.*")) {
-            // unless 2-part age rule, then keep
-          } else if (refSetMember.getMapRule()
-              .matches("IFA\\s\\d*\\s\\|\\s.*\\s\\|\\s[<>].*")
-              && !refSetMember.getMapRule().contains("AND IFA")) {
-            // unless simple age rule without compund clause, then keep
-          } else {
-            // else skip
-            Logger.getLogger(MappingServiceJpa.class)
-                .debug("    Skipping refset member exclusion rule "
-                    + refSetMember.getTerminologyId());
+        for (final ComplexMapRefSetMember refSetMember : complexMapRefSetMembers) {
+
+          // Skip inactive cases
+          if (!refSetMember.isActive()) {
+            Logger.getLogger(MappingServiceJpa.class).debug(
+                "Skipping refset member " + refSetMember.getTerminologyId());
             continue;
           }
-        }
 
-        // retrieve the concept
-        Logger.getLogger(MappingServiceJpa.class)
-            .debug("    Get refset member concept");
-        Concept concept = refSetMember.getConcept();
+          // Skip concept exclusion rules
+          if (refSetMember.getMapRule() != null
+              && refSetMember.getMapRule().matches("IFA.*")) {
+            if (refSetMember.getMapAdvice()
+                .contains("MAP IS CONTEXT DEPENDENT FOR GENDER")
+                && !refSetMember.getMapRule().contains("AND IFA")) {
+              // unless simple gender rule, then keep
+            } else if (refSetMember.getMapRule().matches(
+                "IFA\\s\\d*\\s\\|\\s.*\\s\\|\\s[<>].*AND IFA\\s\\d*\\s\\|\\s.*\\s\\|\\s[<>].*")
+                && !refSetMember.getMapRule().matches(".*AND IFA.*AND IFA.*")) {
+              // unless 2-part age rule, then keep
+            } else if (refSetMember.getMapRule()
+                .matches("IFA\\s\\d*\\s\\|\\s.*\\s\\|\\s[<>].*")
+                && !refSetMember.getMapRule().contains("AND IFA")) {
+              // unless simple age rule without compund clause, then keep
+            } else {
+              // else skip
+              Logger.getLogger(MappingServiceJpa.class)
+                  .debug("    Skipping refset member exclusion rule "
+                      + refSetMember.getTerminologyId());
+              continue;
+            }
+          }
 
-        // if no concept for this ref set member, skip
-        if (concept == null) {
-          continue;
-        }
+          // retrieve the concept
+          Logger.getLogger(MappingServiceJpa.class)
+              .debug("    Get refset member concept");
+          Concept concept = refSetMember.getConcept();
 
-        // if different concept than previous ref set member, create
-        // new
-        // mapRecord
-        if (!concept.getTerminologyId().equals(prevConceptId)) {
-          Logger.getLogger(MappingServiceJpa.class).debug(
-              "    Creating map record for " + concept.getTerminologyId());
+          // if no concept for this ref set member, skip
+          if (concept == null) {
+            continue;
+          }
 
-          mapPriorityCt = 0;
-          prevMapGroup = 0;
-          mapRecord = new MapRecordJpa();
-          mapRecord.setConceptId(concept.getTerminologyId());
-          mapRecord.setConceptName(concept.getDefaultPreferredName());
-          mapRecord.setMapProjectId(mapProject.getId());
+          // if different concept than previous ref set member, create
+          // new
+          // mapRecord
+          if (!concept.getTerminologyId().equals(prevConceptId)) {
+            Logger.getLogger(MappingServiceJpa.class).debug(
+                "    Creating map record for " + concept.getTerminologyId());
 
-          // set the previous concept to this concept
-          prevConceptId = refSetMember.getConcept().getTerminologyId();
+            mapPriorityCt = 0;
+            prevMapGroup = 0;
+            mapRecord = new MapRecordJpa();
+            mapRecord.setConceptId(concept.getTerminologyId());
+            mapRecord.setConceptName(concept.getDefaultPreferredName());
+            mapRecord.setMapProjectId(mapProject.getId());
 
-          // set the owner and lastModifiedBy user fields to
-          // loaderUser
-          mapRecord.setOwner(mapUser);
-          mapRecord.setLastModified(refSetMember.getEffectiveTime().getTime());
-          mapRecord.setLastModifiedBy(mapUser);
+            // set the previous concept to this concept
+            prevConceptId = refSetMember.getConcept().getTerminologyId();
 
-          // random determine workflow state
-          // based on sampling percentage
-          // NOTE: Explicit equality check for -1.0f put in to
-          // avoid
-          // any possible errors
-          // in multiplication/division/comparison
-          if (samplingRate != -1.0f
-              && random.nextInt(100 + 1) / 100.0 < samplingRate) {
-            samplingRecordsCreated++;
-            mapRecord.setWorkflowStatus(workflowStatus);
+            // set the owner and lastModifiedBy user fields to
+            // loaderUser
+            mapRecord.setOwner(mapUser);
+            mapRecord
+                .setLastModified(refSetMember.getEffectiveTime().getTime());
+            mapRecord.setLastModifiedBy(mapUser);
+
+            // random determine workflow state
+            // based on sampling percentage
+            // NOTE: Explicit equality check for -1.0f put in to
+            // avoid
+            // any possible errors
+            // in multiplication/division/comparison
+            if (samplingRate != -1.0f
+                && random.nextInt(100 + 1) / 100.0 < samplingRate) {
+              samplingRecordsCreated++;
+              mapRecord.setWorkflowStatus(workflowStatus);
+            } else {
+              samplingRecordsPublished++;
+              mapRecord.setWorkflowStatus(workflowStatus);
+            }
+
+            addMapRecord(mapRecord);
+
+            if (++ct % commitCt == 0) {
+              Logger.getLogger(MappingServiceJpa.class)
+                  .info("    " + ct + " records created");
+              commit();
+              manager.clear();
+              beginTransaction();
+              // For memory management, avoid keeping cache of
+              // tree
+              // positions
+              contentService = new ContentServiceJpa();
+            }
+          }
+
+          // check if target is in desired terminology; if so, create
+          // entry
+          String targetName = null;
+
+          if (!refSetMember.getMapTarget().equals("")) {
+            Concept c = contentService.getConcept(refSetMember.getMapTarget(),
+                mapProject.getDestinationTerminology(),
+                mapProject.getDestinationTerminologyVersion());
+            if (c == null) {
+              targetName = "Target name could not be determined";
+            } else {
+              targetName = c.getDefaultPreferredName();
+            }
+            Logger.getLogger(getClass())
+                .debug("      Setting target name " + targetName);
           } else {
-            samplingRecordsPublished++;
-            mapRecord.setWorkflowStatus(workflowStatus);
+            targetName = "No target";
           }
 
-          addMapRecord(mapRecord);
-
-          if (++ct % commitCt == 0) {
-            Logger.getLogger(MappingServiceJpa.class)
-                .info("    " + ct + " records created");
-            commit();
-            manager.clear();
-            beginTransaction();
-            // For memory management, avoid keeping cache of
-            // tree
-            // positions
-            contentService.close();
-            contentService = new ContentServiceJpa();
+          // Set map relation id as well from the cache
+          String relationName = null;
+          if (refSetMember.getMapRelationId() != null) {
+            relationName = relationIdNameMap
+                .get(refSetMember.getMapRelationId().toString());
+            Logger.getLogger(getClass())
+                .debug("      Look up relation name = " + relationName);
           }
-        }
 
-        // check if target is in desired terminology; if so, create
-        // entry
-        String targetName = null;
-
-        if (!refSetMember.getMapTarget().equals("")) {
-          Concept c = contentService.getConcept(refSetMember.getMapTarget(),
-              mapProject.getDestinationTerminology(),
-              mapProject.getDestinationTerminologyVersion());
-          if (c == null) {
-            targetName = "Target name could not be determined";
-          } else {
-            targetName = c.getDefaultPreferredName();
+          if (prevMapGroup != refSetMember.getMapGroup()) {
+            mapPriorityCt = 0;
+            prevMapGroup = refSetMember.getMapGroup();
           }
-          Logger.getLogger(getClass())
-              .debug("      Setting target name " + targetName);
-        } else {
-          targetName = "No target";
-        }
+          // Skip no-target mappings for first mapPriority entry on mapGroups >
+          // 1
+          if (refSetMember.getMapGroup() > 1 && mapPriorityCt == 0
+              && refSetMember.getMapTarget().isEmpty()) {
+            continue;
+          }
 
-        // Set map relation id as well from the cache
-        String relationName = null;
-        if (refSetMember.getMapRelationId() != null) {
-          relationName =
-              relationIdNameMap.get(refSetMember.getMapRelationId().toString());
-          Logger.getLogger(getClass())
-              .debug("      Look up relation name = " + relationName);
-        }
+          Logger.getLogger(getClass()).debug("      Create map entry");
+          MapEntry mapEntry = new MapEntryJpa();
+          mapEntry.setTargetId(refSetMember.getMapTarget() == null ? ""
+              : refSetMember.getMapTarget());
+          mapEntry.setTargetName(targetName);
+          mapEntry.setMapRecord(mapRecord);
+          mapEntry.setMapRelation(
+              mapRelationIdMap.get(refSetMember.getMapRelationId().toString()));
+          String rule = refSetMember.getMapRule();
+          if (rule != null && rule.equals("OTHERWISE TRUE"))
+            rule = "TRUE";
+          mapEntry.setRule(rule);
+          mapEntry.setMapBlock(refSetMember.getMapBlock());
+          mapEntry.setMapGroup(refSetMember.getMapGroup());
 
-        if (prevMapGroup != refSetMember.getMapGroup()) {
-          mapPriorityCt = 0;
-          prevMapGroup = refSetMember.getMapGroup();
-        }
-        // Skip no-target mappings for first mapPriority entry on mapGroups > 1
-        if (refSetMember.getMapGroup() > 1 && mapPriorityCt == 0
-            && refSetMember.getMapTarget().isEmpty()) {
-          continue;
-        }
+          // Increment map priority as we go through records
+          mapEntry.setMapPriority(++mapPriorityCt);
 
-        Logger.getLogger(getClass()).debug("      Create map entry");
-        MapEntry mapEntry = new MapEntryJpa();
-        mapEntry.setTargetId(refSetMember.getMapTarget() == null ? ""
-            : refSetMember.getMapTarget());
-        mapEntry.setTargetName(targetName);
-        mapEntry.setMapRecord(mapRecord);
-        mapEntry.setMapRelation(
-            mapRelationIdMap.get(refSetMember.getMapRelationId().toString()));
-        String rule = refSetMember.getMapRule();
-        if (rule != null && rule.equals("OTHERWISE TRUE"))
-          rule = "TRUE";
-        mapEntry.setRule(rule);
-        mapEntry.setMapBlock(refSetMember.getMapBlock());
-        mapEntry.setMapGroup(refSetMember.getMapGroup());
+          mapRecord.addMapEntry(mapEntry);
 
-        // Increment map priority as we go through records
-        mapEntry.setMapPriority(++mapPriorityCt);
-
-        mapRecord.addMapEntry(mapEntry);
-
-        // Add support for advices - and there can be multiple map
-        // advice values
-        // Only add advice if it is an allowable value and doesn't
-        // match
-        // relation name
-        // This should automatically exclude IFA/ALWAYS advice
-        Logger.getLogger(getClass()).debug("      Setting map advice");
-        if (refSetMember.getMapAdvice() != null
-            && !refSetMember.getMapAdvice().equals("")) {
-          for (final MapAdvice ma : mapAdvices.getIterable()) {
-            if (refSetMember.getMapAdvice().indexOf(ma.getName()) != -1
-                && !ma.getName().toUpperCase().equals(
-                    relationName == null ? "" : relationName.toUpperCase())) {
-              mapEntry.addMapAdvice(ma);
-              Logger.getLogger(getClass()).debug("    " + ma.getName());
+          // Add support for advices - and there can be multiple map
+          // advice values
+          // Only add advice if it is an allowable value and doesn't
+          // match
+          // relation name
+          // This should automatically exclude IFA/ALWAYS advice
+          Logger.getLogger(getClass()).debug("      Setting map advice");
+          if (refSetMember.getMapAdvice() != null
+              && !refSetMember.getMapAdvice().equals("")) {
+            for (final MapAdvice ma : mapAdvices.getIterable()) {
+              if (refSetMember.getMapAdvice().indexOf(ma.getName()) != -1
+                  && !ma.getName().toUpperCase().equals(
+                      relationName == null ? "" : relationName.toUpperCase())) {
+                mapEntry.addMapAdvice(ma);
+                Logger.getLogger(getClass()).debug("    " + ma.getName());
+              }
             }
           }
         }
-      }
 
-      Logger.getLogger(MappingServiceJpa.class)
-          .info("    " + ct + " records created");
-      if (samplingRate != -1.0f) {
-        Logger.getLogger(MappingServiceJpa.class).info("    "
-            + samplingRecordsCreated + " records set to " + workflowStatus);
-        Logger.getLogger(MappingServiceJpa.class).info(
-            "    " + samplingRecordsPublished + " records set to PUBLISHED");
-      }
+        Logger.getLogger(MappingServiceJpa.class)
+            .info("    " + ct + " records created");
+        if (samplingRate != -1.0f) {
+          Logger.getLogger(MappingServiceJpa.class).info("    "
+              + samplingRecordsCreated + " records set to " + workflowStatus);
+          Logger.getLogger(MappingServiceJpa.class).info(
+              "    " + samplingRecordsPublished + " records set to PUBLISHED");
+        }
 
-      commit();
-      contentService.close();
-      metadataService.close();
-    } catch (Exception e) {
+        commit();
+      } catch (Exception e) {
+        setTransactionPerOperation(prevTransactionPerOperationSetting);
+        throw e;
+      } finally {
+        contentService.close();
+      }
       setTransactionPerOperation(prevTransactionPerOperationSetting);
-      throw e;
     }
-    setTransactionPerOperation(prevTransactionPerOperationSetting);
 
   }
 
+  /* see superclass */
   @Override
   public void appendEntriesToMapRecordsForProject(Long mapProjectId,
     MapUser mapUser, List<ComplexMapRefSetMember> complexMapRefSetMembers,
@@ -2164,258 +2169,258 @@ public class MappingServiceJpa extends RootServiceJpa
     }
 
     // Setup content service
-    ContentService contentService = new ContentServiceJpa();
+    try (final ContentService contentService = new ContentServiceJpa();
+        WorkflowService workflowService = new WorkflowServiceJpa();
+        MetadataService metadataService = new MetadataServiceJpa();) {
 
-    // Setup workflow service
-    WorkflowService workflowService = new WorkflowServiceJpa();
+      Map<String, String> relationIdNameMap =
+          metadataService.getMapRelations(mapProject.getSourceTerminology(),
+              mapProject.getSourceTerminologyVersion());
+      Logger.getLogger(MappingServiceJpa.class)
+          .debug("    relationIdNameMap = " + relationIdNameMap);
 
-    // Get map relation id->name mapping
-    MetadataService metadataService = new MetadataServiceJpa();
-
-    Map<String, String> relationIdNameMap =
-        metadataService.getMapRelations(mapProject.getSourceTerminology(),
-            mapProject.getSourceTerminologyVersion());
-    Logger.getLogger(MappingServiceJpa.class)
-        .debug("    relationIdNameMap = " + relationIdNameMap);
-
-    // use the map relation id->name mapping to construct a hash set of
-    // MapRelations
-    Map<String, MapRelation> mapRelationIdMap = new HashMap<>();
-    for (final MapRelation mapRelation : getMapRelations().getIterable()) {
-      mapRelationIdMap.put(mapRelation.getTerminologyId(), mapRelation);
-      relationIdNameMap.put(mapRelation.getTerminologyId(),
-          mapRelation.getName());
-    }
-
-    // keep track of each concept's original highest Group value.
-    // This will allow us to bump up the incoming map groups if neccesary so
-    // they don't overwrite existing map groups/entries
-    Map<String, Integer> conceptIdOrigMaxGroup = new HashMap<>();
-    Map<String, Boolean> conceptIdNeedsBumping = new HashMap<>();
-
-    boolean prevTransactionPerOperationSetting = getTransactionPerOperation();
-    setTransactionPerOperation(false);
-    beginTransaction();
-    MapAdviceList mapAdvices = getMapAdvices();
-    int mapPriorityCt = 0;
-    int prevMapGroup = 0;
-
-    try {
-      MapRecord mapRecord = null;
-      int ct = 0;
-
-      if (mapUser == null) {
-        metadataService.close();
-        contentService.close();
-        throw new Exception("Loader user could not be found");
+      // use the map relation id->name mapping to construct a hash set of
+      // MapRelations
+      Map<String, MapRelation> mapRelationIdMap = new HashMap<>();
+      for (final MapRelation mapRelation : getMapRelations().getIterable()) {
+        mapRelationIdMap.put(mapRelation.getTerminologyId(), mapRelation);
+        relationIdNameMap.put(mapRelation.getTerminologyId(),
+            mapRelation.getName());
       }
 
-      for (final ComplexMapRefSetMember refSetMember : complexMapRefSetMembers) {
+      // keep track of each concept's original highest Group value.
+      // This will allow us to bump up the incoming map groups if neccesary so
+      // they don't overwrite existing map groups/entries
+      Map<String, Integer> conceptIdOrigMaxGroup = new HashMap<>();
+      Map<String, Boolean> conceptIdNeedsBumping = new HashMap<>();
 
-        // Handling the below cases is out of scope for intended use of this
-        // function
-        // But keeping the code here just in case we want to add again later
-        // // Skip inactive cases
-        // if (!refSetMember.isActive()) {
-        // Logger.getLogger(MappingServiceJpa.class).debug(
-        // "Skipping refset member " + refSetMember.getTerminologyId());
-        // continue;
-        // }
-        //
-        // // Skip concept exclusion rules
-        // if (refSetMember.getMapRule() != null
-        // && refSetMember.getMapRule().matches("IFA.*")) {
-        // if (refSetMember.getMapAdvice()
-        // .contains("MAP IS CONTEXT DEPENDENT FOR GENDER")
-        // && !refSetMember.getMapRule().contains("AND IFA")) {
-        // // unless simple gender rule, then keep
-        // } else if (refSetMember.getMapRule().matches(
-        // "IFA\\s\\d*\\s\\|\\s.*\\s\\|\\s[<>].*AND
-        // IFA\\s\\d*\\s\\|\\s.*\\s\\|\\s[<>].*")
-        // && !refSetMember.getMapRule().matches(".*AND IFA.*AND IFA.*")) {
-        // // unless 2-part age rule, then keep
-        // } else if (refSetMember.getMapRule()
-        // .matches("IFA\\s\\d*\\s\\|\\s.*\\s\\|\\s[<>].*")
-        // && !refSetMember.getMapRule().contains("AND IFA")) {
-        // // unless simple age rule without compund clause, then keep
-        // } else {
-        // // else skip
-        // Logger.getLogger(MappingServiceJpa.class)
-        // .debug(" Skipping refset member exclusion rule "
-        // + refSetMember.getTerminologyId());
-        // continue;
-        // }
-        // }
+      boolean prevTransactionPerOperationSetting = getTransactionPerOperation();
+      setTransactionPerOperation(false);
+      beginTransaction();
+      MapAdviceList mapAdvices = getMapAdvices();
+      int mapPriorityCt = 0;
+      int prevMapGroup = 0;
 
-        // retrieve the concept
-        Logger.getLogger(MappingServiceJpa.class)
-            .debug("    Get refset member concept");
-        Concept concept = refSetMember.getConcept();
+      try {
+        MapRecord mapRecord = null;
+        int ct = 0;
 
-        // if no concept for this ref set member, skip
-        if (concept == null) {
-          continue;
+        if (mapUser == null) {
+          throw new Exception("Loader user could not be found");
         }
 
-        // Identifying max group for each concept prior to starting of this run
-        if (!conceptIdOrigMaxGroup.keySet()
-            .contains(concept.getTerminologyId())) {
+        for (final ComplexMapRefSetMember refSetMember : complexMapRefSetMembers) {
+
+          // Handling the below cases is out of scope for intended use of this
+          // function
+          // But keeping the code here just in case we want to add again later
+          // // Skip inactive cases
+          // if (!refSetMember.isActive()) {
+          // Logger.getLogger(MappingServiceJpa.class).debug(
+          // "Skipping refset member " + refSetMember.getTerminologyId());
+          // continue;
+          // }
+          //
+          // // Skip concept exclusion rules
+          // if (refSetMember.getMapRule() != null
+          // && refSetMember.getMapRule().matches("IFA.*")) {
+          // if (refSetMember.getMapAdvice()
+          // .contains("MAP IS CONTEXT DEPENDENT FOR GENDER")
+          // && !refSetMember.getMapRule().contains("AND IFA")) {
+          // // unless simple gender rule, then keep
+          // } else if (refSetMember.getMapRule().matches(
+          // "IFA\\s\\d*\\s\\|\\s.*\\s\\|\\s[<>].*AND
+          // IFA\\s\\d*\\s\\|\\s.*\\s\\|\\s[<>].*")
+          // && !refSetMember.getMapRule().matches(".*AND IFA.*AND IFA.*")) {
+          // // unless 2-part age rule, then keep
+          // } else if (refSetMember.getMapRule()
+          // .matches("IFA\\s\\d*\\s\\|\\s.*\\s\\|\\s[<>].*")
+          // && !refSetMember.getMapRule().contains("AND IFA")) {
+          // // unless simple age rule without compund clause, then keep
+          // } else {
+          // // else skip
+          // Logger.getLogger(MappingServiceJpa.class)
+          // .debug(" Skipping refset member exclusion rule "
+          // + refSetMember.getTerminologyId());
+          // continue;
+          // }
+          // }
+
+          // retrieve the concept
           Logger.getLogger(MappingServiceJpa.class)
-              .debug("    Identifying max Group value for "
-                  + concept.getTerminologyId());
+              .debug("    Get refset member concept");
+          Concept concept = refSetMember.getConcept();
 
-          mapRecord = getMapRecordsForProjectAndConcept(mapProjectId,
-              concept.getTerminologyId()).getMapRecords().get(0);
-
-          // Skip if member is for a concept that has a map record that are not
-          // READY_FOR_PUBLICATION or PUBLISHED
-          if (!mapRecord.getWorkflowStatus()
-              .equals(WorkflowStatus.READY_FOR_PUBLICATION)
-              && !mapRecord.getWorkflowStatus()
-                  .equals(WorkflowStatus.PUBLISHED)) {
-            notReadyForPubList.add(refSetMember.toString());
+          // if no concept for this ref set member, skip
+          if (concept == null) {
             continue;
           }
 
-          List<MapEntry> mapEntries = mapRecord.getMapEntries();
+          // Identifying max group for each concept prior to starting of this
+          // run
+          if (!conceptIdOrigMaxGroup.keySet()
+              .contains(concept.getTerminologyId())) {
+            Logger.getLogger(MappingServiceJpa.class)
+                .debug("    Identifying max Group value for "
+                    + concept.getTerminologyId());
 
-          int maxGroupCount = 0;
-          for (MapEntry mapEntry : mapEntries) {
-            if (mapEntry.getMapGroup() > maxGroupCount) {
-              maxGroupCount = mapEntry.getMapGroup();
+            mapRecord = getMapRecordsForProjectAndConcept(mapProjectId,
+                concept.getTerminologyId()).getMapRecords().get(0);
+
+            // Skip if member is for a concept that has a map record that are
+            // not
+            // READY_FOR_PUBLICATION or PUBLISHED
+            if (!mapRecord.getWorkflowStatus()
+                .equals(WorkflowStatus.READY_FOR_PUBLICATION)
+                && !mapRecord.getWorkflowStatus()
+                    .equals(WorkflowStatus.PUBLISHED)) {
+              notReadyForPubList.add(refSetMember.toString());
+              continue;
+            }
+
+            List<MapEntry> mapEntries = mapRecord.getMapEntries();
+
+            int maxGroupCount = 0;
+            for (MapEntry mapEntry : mapEntries) {
+              if (mapEntry.getMapGroup() > maxGroupCount) {
+                maxGroupCount = mapEntry.getMapGroup();
+              }
+            }
+
+            conceptIdOrigMaxGroup.put(concept.getTerminologyId(),
+                maxGroupCount);
+          }
+
+          // check if target is in desired terminology; if so, create
+          // entry
+          String targetName = null;
+
+          if (!refSetMember.getMapTarget().equals("")) {
+            Concept c = contentService.getConcept(refSetMember.getMapTarget(),
+                mapProject.getDestinationTerminology(),
+                mapProject.getDestinationTerminologyVersion());
+            if (c == null) {
+              targetName = "Target name could not be determined";
+            } else {
+              targetName = c.getDefaultPreferredName();
+            }
+            Logger.getLogger(getClass())
+                .debug("      Setting target name " + targetName);
+          } else {
+            targetName = "No target";
+          }
+
+          // Set map relation id as well from the cache
+          String relationName = null;
+          if (refSetMember.getMapRelationId() != null) {
+            relationName = relationIdNameMap
+                .get(refSetMember.getMapRelationId().toString());
+            Logger.getLogger(getClass())
+                .debug("      Look up relation name = " + relationName);
+          }
+
+          if (prevMapGroup != refSetMember.getMapGroup()) {
+            mapPriorityCt = 0;
+            prevMapGroup = refSetMember.getMapGroup();
+          }
+          // Skip no-target mappings for first mapPriority entry on mapGroups >
+          // 1
+          if (refSetMember.getMapGroup() > 1 && mapPriorityCt == 0
+              && refSetMember.getMapTarget().isEmpty()) {
+            continue;
+          }
+
+          // Check to see if this concept' new entry is going to require map
+          // group
+          // value bumping to avoid overwriting an existing entry
+          // Only check once per concept
+          if (!conceptIdNeedsBumping
+              .containsKey(refSetMember.getConcept().getTerminologyId())) {
+            if (refSetMember.getMapGroup() <= (conceptIdOrigMaxGroup
+                .get(refSetMember.getConcept().getTerminologyId()))) {
+              conceptIdNeedsBumping
+                  .put(refSetMember.getConcept().getTerminologyId(), true);
+            } else {
+              conceptIdNeedsBumping
+                  .put(refSetMember.getConcept().getTerminologyId(), false);
             }
           }
 
-          conceptIdOrigMaxGroup.put(concept.getTerminologyId(), maxGroupCount);
-        }
+          Logger.getLogger(getClass()).debug("      Create map entry");
+          MapEntry mapEntry = new MapEntryJpa();
+          mapEntry.setTargetId(refSetMember.getMapTarget() == null ? ""
+              : refSetMember.getMapTarget());
+          mapEntry.setTargetName(targetName);
+          mapEntry.setMapRecord(mapRecord);
+          mapEntry.setMapRelation(
+              mapRelationIdMap.get(refSetMember.getMapRelationId().toString()));
+          String rule = refSetMember.getMapRule();
+          if (rule != null && rule.equals("OTHERWISE TRUE"))
+            rule = "TRUE";
+          mapEntry.setRule(rule);
+          mapEntry.setMapBlock(refSetMember.getMapBlock());
 
-        // check if target is in desired terminology; if so, create
-        // entry
-        String targetName = null;
-
-        if (!refSetMember.getMapTarget().equals("")) {
-          Concept c = contentService.getConcept(refSetMember.getMapTarget(),
-              mapProject.getDestinationTerminology(),
-              mapProject.getDestinationTerminologyVersion());
-          if (c == null) {
-            targetName = "Target name could not be determined";
-          } else {
-            targetName = c.getDefaultPreferredName();
+          // Bump up the refsetMember's map group value, if it has been
+          // previously
+          // determined to need it
+          int mapGroupValue = refSetMember.getMapGroup();
+          if (conceptIdNeedsBumping
+              .get(refSetMember.getConcept().getTerminologyId())) {
+            mapGroupValue = mapGroupValue + conceptIdOrigMaxGroup
+                .get(refSetMember.getConcept().getTerminologyId());
           }
-          Logger.getLogger(getClass())
-              .debug("      Setting target name " + targetName);
-        } else {
-          targetName = "No target";
-        }
+          mapEntry.setMapGroup(mapGroupValue);
 
-        // Set map relation id as well from the cache
-        String relationName = null;
-        if (refSetMember.getMapRelationId() != null) {
-          relationName =
-              relationIdNameMap.get(refSetMember.getMapRelationId().toString());
-          Logger.getLogger(getClass())
-              .debug("      Look up relation name = " + relationName);
-        }
+          // Increment map priority as we go through records
+          mapEntry.setMapPriority(refSetMember.getMapPriority());
 
-        if (prevMapGroup != refSetMember.getMapGroup()) {
-          mapPriorityCt = 0;
-          prevMapGroup = refSetMember.getMapGroup();
-        }
-        // Skip no-target mappings for first mapPriority entry on mapGroups > 1
-        if (refSetMember.getMapGroup() > 1 && mapPriorityCt == 0
-            && refSetMember.getMapTarget().isEmpty()) {
-          continue;
-        }
+          mapRecord.addMapEntry(mapEntry);
 
-        // Check to see if this concept' new entry is going to require map group
-        // value bumping to avoid overwriting an existing entry
-        // Only check once per concept
-        if (!conceptIdNeedsBumping
-            .containsKey(refSetMember.getConcept().getTerminologyId())) {
-          if (refSetMember.getMapGroup() <= (conceptIdOrigMaxGroup
-              .get(refSetMember.getConcept().getTerminologyId()))) {
-            conceptIdNeedsBumping
-                .put(refSetMember.getConcept().getTerminologyId(), true);
-          } else {
-            conceptIdNeedsBumping
-                .put(refSetMember.getConcept().getTerminologyId(), false);
+          // Update the mapRecord workflow status, if necessary
+          if (!mapRecord.getWorkflowStatus().equals(workflowStatus)) {
+            mapRecord.setWorkflowStatus(workflowStatus);
+            updateMapRecord(mapRecord);
           }
-        }
 
-        Logger.getLogger(getClass()).debug("      Create map entry");
-        MapEntry mapEntry = new MapEntryJpa();
-        mapEntry.setTargetId(refSetMember.getMapTarget() == null ? ""
-            : refSetMember.getMapTarget());
-        mapEntry.setTargetName(targetName);
-        mapEntry.setMapRecord(mapRecord);
-        mapEntry.setMapRelation(
-            mapRelationIdMap.get(refSetMember.getMapRelationId().toString()));
-        String rule = refSetMember.getMapRule();
-        if (rule != null && rule.equals("OTHERWISE TRUE"))
-          rule = "TRUE";
-        mapEntry.setRule(rule);
-        mapEntry.setMapBlock(refSetMember.getMapBlock());
-
-        // Bump up the refsetMember's map group value, if it has been previously
-        // determined to need it
-        int mapGroupValue = refSetMember.getMapGroup();
-        if (conceptIdNeedsBumping
-            .get(refSetMember.getConcept().getTerminologyId())) {
-          mapGroupValue = mapGroupValue + conceptIdOrigMaxGroup
-              .get(refSetMember.getConcept().getTerminologyId());
-        }
-        mapEntry.setMapGroup(mapGroupValue);
-
-        // Increment map priority as we go through records
-        mapEntry.setMapPriority(refSetMember.getMapPriority());
-
-        mapRecord.addMapEntry(mapEntry);
-
-        // Update the mapRecord workflow status, if necessary
-        if (!mapRecord.getWorkflowStatus().equals(workflowStatus)) {
-          mapRecord.setWorkflowStatus(workflowStatus);
-          updateMapRecord(mapRecord);
-        }
-
-        // Add support for advices - and there can be multiple map
-        // advice values
-        // Only add advice if it is an allowable value and doesn't
-        // match relation name
-        // This should automatically exclude IFA/ALWAYS advice
-        Logger.getLogger(getClass()).debug("      Setting map advice");
-        if (refSetMember.getMapAdvice() != null
-            && !refSetMember.getMapAdvice().equals("")) {
-          for (final MapAdvice ma : mapAdvices.getIterable()) {
-            if (refSetMember.getMapAdvice().indexOf(ma.getName()) != -1
-                && !ma.getName().toUpperCase().equals(
-                    relationName == null ? "" : relationName.toUpperCase())) {
-              mapEntry.addMapAdvice(ma);
-              Logger.getLogger(getClass()).debug("    " + ma.getName());
+          // Add support for advices - and there can be multiple map
+          // advice values
+          // Only add advice if it is an allowable value and doesn't
+          // match relation name
+          // This should automatically exclude IFA/ALWAYS advice
+          Logger.getLogger(getClass()).debug("      Setting map advice");
+          if (refSetMember.getMapAdvice() != null
+              && !refSetMember.getMapAdvice().equals("")) {
+            for (final MapAdvice ma : mapAdvices.getIterable()) {
+              if (refSetMember.getMapAdvice().indexOf(ma.getName()) != -1
+                  && !ma.getName().toUpperCase().equals(
+                      relationName == null ? "" : relationName.toUpperCase())) {
+                mapEntry.addMapAdvice(ma);
+                Logger.getLogger(getClass()).debug("    " + ma.getName());
+              }
             }
           }
+          ct++;
         }
-        ct++;
-      }
 
-      Logger.getLogger(MappingServiceJpa.class)
-          .info("    " + ct + " records updated");
+        Logger.getLogger(MappingServiceJpa.class)
+            .info("    " + ct + " records updated");
 
-      if (notReadyForPubList.size() > 0) {
-        Logger.getLogger(MappingServiceJpa.class).warn(
-            "The following members were skipped because they were associated with concepts that were currently in the workflow being edited.");
-        for (String message : notReadyForPubList) {
-          Logger.getLogger(MappingServiceJpa.class).warn(message);
+        if (notReadyForPubList.size() > 0) {
+          Logger.getLogger(MappingServiceJpa.class).warn(
+              "The following members were skipped because they were associated with concepts that were currently in the workflow being edited.");
+          for (String message : notReadyForPubList) {
+            Logger.getLogger(MappingServiceJpa.class).warn(message);
+          }
         }
-      }
 
-      commit();
-      contentService.close();
-      metadataService.close();
-    } catch (Exception e) {
+        commit();
+
+      } catch (Exception e) {
+        setTransactionPerOperation(prevTransactionPerOperationSetting);
+        throw e;
+      }
       setTransactionPerOperation(prevTransactionPerOperationSetting);
-      throw e;
     }
-    setTransactionPerOperation(prevTransactionPerOperationSetting);
 
   }
 
@@ -2503,9 +2508,8 @@ public class MappingServiceJpa extends RootServiceJpa
 
     Logger.getLogger(MappingServiceJpa.class).info("Finding user " + userName);
     MapUser mapUser = getMapUser(userName);
-    javax.persistence.Query query = manager
-        .createQuery(
-            "select m from MapUserPreferencesJpa m where mapUser_id = :mapUser_id")
+    javax.persistence.Query query = manager.createQuery(
+        "select m from MapUserPreferencesJpa m where mapUser_id = :mapUser_id")
         .setParameter("mapUser_id", mapUser.getId());
 
     MapUserPreferences m;
@@ -2672,13 +2676,14 @@ public class MappingServiceJpa extends RootServiceJpa
   @Override
   @XmlTransient
   public ProjectSpecificAlgorithmHandler getProjectSpecificAlgorithmHandler(
-    MapProject mapProject) throws InstantiationException,
-    IllegalAccessException, ClassNotFoundException {
+    MapProject mapProject)
+    throws InstantiationException, IllegalAccessException,
+    ClassNotFoundException, NoSuchMethodException, InvocationTargetException {
 
     ProjectSpecificAlgorithmHandler algorithmHandler =
         (ProjectSpecificAlgorithmHandler) Class
             .forName(mapProject.getProjectSpecificAlgorithmHandlerClass())
-            .newInstance();
+            .getDeclaredConstructor().newInstance();
 
     algorithmHandler.setMapProject(mapProject);
     return algorithmHandler;
